Update form factors to module profile elements
Bug: 333951617
Bug: 324628797
Test: manual
Flag: NONE refactor
Change-Id: I7241ba9e940d742023881f7f3b86edf61f17bd13

--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_top_system_bar_dock.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/car_top_system_bar_dock.xml
@@ -118,20 +118,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/top_system_bar_icon_size"
                 android:gravity="center">
-                <com.android.systemui.car.systembar.CarSystemBarButton
+                <com.android.systemui.car.systembar.CarSystemBarPanelButtonView
                     android:id="@+id/user_name"
                     style="@style/CarTopSystemBarButton"
-                    android:background="@drawable/status_icon_background">
-                    <ImageView
+                    android:background="@drawable/status_icon_background"
+                    systemui:controller="com.android.systemui.car.systembar.UserNamePanelButtonViewController"
+                    systemui:panelLayoutRes="@layout/qc_profile_switcher"
+                    systemui:panelWidthRes="@dimen/car_profile_quick_controls_panel_width"
+                    systemui:gravity="top|end"
+                    systemui:disabledWhileUnprovisioned="true"
+                    systemui:disabledWhileDriving="@bool/config_profile_panel_disabled_while_driving"
+                    systemui:systemBarDisable2Flags="quickSettings">
+                    <com.android.systemui.car.systembar.element.layout.CarSystemBarImageView
                         android:id="@+id/user_avatar"
                         android:layout_gravity="center"
-                        android:layout_width="@dimen/top_system_bar_icon_drawing_size"
-                        android:layout_height="@dimen/top_system_bar_icon_drawing_size"
-                        android:src="@drawable/car_ic_user_icon"
-                        android:tint="@color/system_bar_icon_color_with_selection"/>
-
-                </com.android.systemui.car.systembar.CarSystemBarButton>
-
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_margin="@dimen/car_padding_0"
+                        systemui:controller="com.android.systemui.car.systembar.UserNameImageViewController"
+                        />
+                </com.android.systemui.car.systembar.CarSystemBarPanelButtonView>
             </FrameLayout>
         </LinearLayout>
 
