Temp fix for CtsSurfaceControlTests
Add the activity to fullscreen taskview to avoid extra onStop during
immersive mode transition.

Bug: 366360567
Test: atest CtsSurfaceControlTests
Flag: EXEMPT bugfix
Change-Id: If53bade2462dd84f35d769ac9536c5b73c59f169

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
@@ -68,6 +68,8 @@
         <item>android.view.surfacecontrol.cts/android.view.cts.surfacevalidator.CapturedActivity</item>
         <item>android.view.surfacecontrol.cts/.TrustedPresentationCallbackTest$TestActivity</item>
         <item>android.view.surfacecontrol.cts/android.view.cts.surfacevalidator.CapturedActivityWithResource</item>
+        <!-- TODO(b/368426111): Remove once immersive mode doesn't cause extra lifecycle to the activity.-->
+        <item>android.view.surfacecontrol.cts/android.view.surfacecontrol.cts.TestActivity</item>
         <item>android.uirendering.cts/android.uirendering.cts.testinfrastructure.DrawActivity</item>
         <item>android.display.cts/android.display.cts.DisplayManagerTest$TestActivity</item>
         <!-- TODO(b/297060765): Remove AssistantActivity & AnimationTestActivity once find a proper
