Disable dock media appps for RB
RB doesn't need to have media apps enabled while driving since there is
already a playback bar. Adding config flag to disable it.

Bug: 369683531
Test: manual on husdon and RB
Flag: EXEMPT bug_fix
Change-Id: If5b0ffa78297bdb65f1844b6e1b03f894cec5251

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
@@ -104,8 +104,8 @@
 
     <!--
         Config for allowing NDO apps to be opened while driving if they contain an active media
-        session
-        TODO(b/310687870): Add RB to testing plan
+        session and media notification. These NDO apps will still be blocked by blocking UI, but may
+        be provided playback controls.
     -->
     <bool name="config_enableMediaSessionAppsWhileDriving">false</bool>
 
