--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
@@ -43,6 +43,7 @@
             android:layout_width="@dimen/control_bar_media_card_album_art_size"
             android:layout_height="@dimen/control_bar_media_card_album_art_size"
             android:background="@drawable/radius_24_background"
+            android:src="@drawable/media_card_default_album_art"
             android:clipToOutline="true"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -222,6 +223,7 @@
             android:padding="@dimen/control_bar_media_card_playback_button_icon_padding"
             android:cropToPadding="true"
             android:backgroundTint="@color/car_surface_container_highest"
+            android:visibility="gone"
             app:layout_constraintStart_toEndOf="@id/play_pause_button"
             app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
             app:layout_constraintTop_toTopOf="@id/play_pause_button" />
@@ -238,6 +240,7 @@
             android:padding="@dimen/control_bar_media_card_playback_button_icon_padding"
             android:cropToPadding="true"
             android:backgroundTint="@color/car_surface_container_highest"
+            android:visibility="gone"
             app:layout_goneMarginStart="@dimen/media_card_view_separation_margin"
             app:layout_constraintStart_toEndOf="@id/playback_action_id1"
             app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
