--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/xml/control_bar_media_card_queue_history_motion_scene.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/xml/control_bar_media_card_queue_history_motion_scene.xml
@@ -26,12 +26,60 @@
         <KeyFrameSet>
             <KeyAttribute
                 android:alpha="0"
-                motion:framePosition="50"
+                motion:framePosition="10"
                 motion:motionTarget="@id/title" />
             <KeyAttribute
                 android:alpha="0"
-                motion:framePosition="50"
+                motion:framePosition="85"
+                motion:motionTarget="@id/title" />
+            <KeyPosition
+                motion:motionTarget="@+id/title"
+                motion:framePosition="20"
+                motion:keyPositionType="deltaRelative"
+                motion:percentX="0"
+                motion:percentY="0"/>
+            <KeyPosition
+                motion:motionTarget="@+id/title"
+                motion:framePosition="75"
+                motion:keyPositionType="deltaRelative"
+                motion:percentX="1"
+                motion:percentY="1"/>
+            <KeyAttribute
+                android:alpha="0"
+                motion:framePosition="10"
                 motion:motionTarget="@id/playback_seek_bar" />
+            <KeyAttribute
+                android:alpha="0"
+                motion:framePosition="85"
+                motion:motionTarget="@id/playback_seek_bar" />
+            <KeyPosition
+                motion:motionTarget="@+id/playback_seek_bar"
+                motion:framePosition="20"
+                motion:keyPositionType="deltaRelative"
+                motion:percentX="0"
+                motion:percentY="0"/>
+            <KeyPosition
+                motion:motionTarget="@+id/playback_seek_bar"
+                motion:framePosition="75"
+                motion:keyPositionType="deltaRelative"
+                motion:percentX="1"
+                motion:percentY="1"/>
+            <KeyAttribute
+                android:alpha="0"
+                motion:framePosition="10"
+                motion:motionTarget="@id/subtitle" />
+            <KeyAttribute
+                android:alpha="0"
+                motion:framePosition="10"
+                motion:motionTarget="@id/current_time" />
+            <KeyAttribute
+                android:alpha="0"
+                motion:framePosition="10"
+                motion:motionTarget="@id/max_time" />
+            <KeyAttribute
+                android:alpha="0"
+                motion:framePosition="10"
+                motion:motionTarget="@id/inner_separator" />
         </KeyFrameSet>
     </Transition>
 
