Update ASV size on RB
Bug: 356646555
Test: Manual
Test: Open Usage & Diagnostics page in settings
Flag: EXEMPT resource only

Change-Id: I86dccd42f313658de9519684251335ee4cd8795a

--- a/car_product/car_ui_portrait/rro/car-ui-customizations/res/values/dimens.xml
+++ b/car_product/car_ui_portrait/rro/car-ui-customizations/res/values/dimens.xml
@@ -49,4 +49,9 @@
     <dimen name="car_ui_preference_content_margin_bottom">16dp</dimen>
     <dimen name="car_ui_preference_icon_size">56dp</dimen>
     <dimen name="car_ui_preference_icon_margin_end">16dp</dimen>
+
+    <dimen name="car_ui_app_styled_dialog_width">960dp</dimen>
+    <dimen name="car_ui_app_styled_dialog_height">672dp</dimen>
+    <dimen name="car_ui_app_styled_dialog_position_x">132dp</dimen>
+    <dimen name="car_ui_app_styled_dialog_position_y">104dp</dimen>
 </resources>
