Fix SurfaceControlViewHostTests for portraitUI
Bug: 366360567
Test: atest android.view.surfacecontrol.cts.SurfaceControlViewHostTests
Change-Id: I3270e87f98ac238d3ba76fef0bb3be0ca29e9fab
Flag: EXEMPT bugfix

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/values/config.xml
@@ -65,6 +65,8 @@
         <item>android.server.wm.app/android.server.wm.app.MinAspectRatioLandscapeActivity</item>
         <item>android.server.wm.app/android.server.wm.app.MinAspectRatioPortraitActivity</item>
         <item>android.server.wm.app/android.server.wm.app.MinAspectRatioUnsetActivity</item>
+        <!-- TODO(b/372517324): Remove once ag/28710677 is in AOSP.-->
+        <item>android.view.surfacecontrol.cts/android.view.surfacecontrol.cts.SurfaceControlViewHostTests$TestActivity</item>
         <item>android.view.surfacecontrol.cts/android.view.cts.surfacevalidator.CapturedActivity</item>
         <item>android.view.surfacecontrol.cts/.TrustedPresentationCallbackTest$TestActivity</item>
         <item>android.view.surfacecontrol.cts/android.view.cts.surfacevalidator.CapturedActivityWithResource</item>
