--- a/car_product/car_ui_portrait/rro/CarUiPortraitNotificationRRO/res/layout/car_notification_body_view.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitNotificationRRO/res/layout/car_notification_body_view.xml
@@ -33,36 +33,44 @@
         android:layout_marginEnd="@dimen/time_margin"
         style="@style/NotificationHeaderText"/>
 
-    <TextView
-        android:id="@+id/notification_body_title"
+    <LinearLayout
+        android:id="@+id/notification_body_title_container"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/notification_body_icon"
         android:layout_toEndOf="@id/notification_body_icon"
         android:layout_alignWithParentIfMissing="true"
         android:layout_marginStart="@dimen/card_start_margin"
-        android:layout_marginEnd="@dimen/notification_body_title_margin"
-        style="@style/NotificationBodyTitleText"/>
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/notification_body_title_icon"
-        android:layout_width="@dimen/notification_secondary_icon_size"
-        android:layout_height="@dimen/notification_secondary_icon_size"
-        android:layout_toEndOf="@id/notification_body_title"
-        android:layout_marginEnd="@dimen/notification_body_title_margin"
-        android:layout_marginTop="@dimen/notification_title_icon_top_margin"
-        android:adjustViewBounds="true"
-        android:background="@null"
-        android:clickable="false"
-        android:focusable="false"
-        android:scaleType="fitXY"/>
+        <TextView
+            android:id="@+id/notification_body_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/notification_body_title_margin"
+            style="@style/NotificationBodyTitleText"/>
+
+        <ImageView
+            android:id="@+id/notification_body_title_icon"
+            android:layout_width="@dimen/notification_secondary_icon_size"
+            android:layout_height="@dimen/notification_secondary_icon_size"
+            android:layout_marginEnd="@dimen/notification_body_title_margin"
+            android:layout_marginTop="@dimen/notification_title_icon_top_margin"
+            android:adjustViewBounds="true"
+            android:background="@null"
+            android:clickable="false"
+            android:focusable="false"
+            android:scaleType="fitXY"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/notification_body_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@id/notification_body_title"
-        android:layout_below="@id/notification_body_title"
+        android:layout_alignStart="@id/notification_body_title_container"
+        android:layout_below="@id/notification_body_title_container"
+        android:layout_alignWithParentIfMissing="true"
         android:layout_marginEnd="@dimen/card_end_margin"
         android:layout_marginTop="@dimen/notification_body_content_top_margin"
         style="@style/NotificationBodyContentText"/>
