Add the debug panel entry to RB
Bug: 372762769
Flag: EXEMPT internal testing tool, only available on userdebug builds
Test: manual
Change-Id: I3c725449179c60c19e04ca20da4c0f2a9d0459c4

--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/qc_status_icons_horizontal.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/layout/qc_status_icons_horizontal.xml
@@ -103,4 +103,23 @@
             android:duplicateParentState="true"
             systemui:controller="com.android.systemui.car.statusicon.ui.MediaVolumeStatusIconController"/>
     </com.android.systemui.car.systembar.CarSystemBarPanelButtonView>
+    <com.android.systemui.car.systembar.CarSystemBarPanelButtonView
+        android:id="@+id/debug_panel"
+        android:orientation="horizontal"
+        android:gravity="center"
+        style="@style/TopBarButton"
+        systemui:controller="com.android.systemui.car.systembar.DebugPanelButtonViewController"
+        systemui:panelLayoutRes="@layout/qc_debug_panel"
+        systemui:disabledWhileUnprovisioned="true"
+        systemui:systemBarDisable2Flags="quickSettings">
+        <ImageView
+            android:id="@+id/debug_status_icon"
+            android:layout_width="@dimen/top_system_bar_qc_icon_drawing_size"
+            android:layout_height="@dimen/top_system_bar_qc_icon_drawing_size"
+            android:layout_gravity="center"
+            android:tint="@color/car_status_icon_color"
+            android:duplicateParentState="true"
+            android:src="@drawable/car_ic_debug"
+            android:contentDescription="@string/status_icon_debug_status"/>
+    </com.android.systemui.car.systembar.CarSystemBarPanelButtonView>
 </LinearLayout>
