--- a/car_product/rro/CarSystemUIRRO/res/xml/overlays.xml
+++ b/car_product/rro/CarSystemUIRRO/res/xml/overlays.xml
@@ -17,6 +17,7 @@
 
 <overlay>
     <item target="style/Theme.SystemUI.Dialog" value="@android:Theme.DeviceDefault.Dialog"/>
+    <item target="dimen/large_dialog_width" value="@dimen/large_dialog_width" />
     <item target="id/auth_credential_input" value="@id/auth_credential_input" />
     <item target="id/cancel_button" value="@id/cancel_button" />
     <item target="id/emergencyCallButton" value="@id/emergencyCallButton" />
