--- a/tests/CustomizationTool/res/layout/vh_panel_header_title.xml
+++ b/tests/CustomizationTool/res/layout/vh_panel_header_title.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?><!--
-  Copyright (C) 2023 The Android Open Source Project
+  Copyright (C) 2024 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
@@ -13,21 +13,11 @@
   See the License for the specific language governing permissions and
   limitations under the License.
   -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/panel_header_title"
+    style="@style/PanelHeaderTitleStyle"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="15dp"
-    android:orientation="horizontal">
+    android:layout_marginEnd="20dp" />
 
-    <TextView
-        android:id="@+id/panel_header_dropdown_text"
-        style="@style/PanelHeaderDropDownStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <Spinner
-        android:id="@+id/panel_header_dropdown"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp" />
-</LinearLayout>
