--- a/tests/CustomizationTool/res/values/styles.xml
+++ b/tests/CustomizationTool/res/values/styles.xml
@@ -40,6 +40,11 @@
         <item name="android:textColor">@color/text_primary</item>
     </style>
 
+    <style name="PanelHeaderTitleStyle" parent="BaseTheme">
+        <item name="android:textSize">@dimen/text_size_panel_header</item>
+        <item name="android:textColor">@color/text_primary</item>
+    </style>
+
     <style name="PanelSectionTitleStyle" parent="BaseTheme">
         <item name="android:textSize">@dimen/text_size_big</item>
         <item name="android:textColor">@color/text_primary</item>
