Update SettingsRRO for new dual pane layout
Bug: 364655999
Test: manual on portrait
Flag: EXEMPT, config only update

Change-Id: If21a05de5a999bf38e6264ab079aabfd6f816265

--- a/car_product/car_ui_portrait/rro/CarUiPortraitSettingsRRO/res/values/config.xml
+++ b/car_product/car_ui_portrait/rro/CarUiPortraitSettingsRRO/res/values/config.xml
@@ -17,6 +17,6 @@
 
 <resources>
     <bool name="config_global_force_single_pane">false</bool>
-    <string name="config_homepage_fragment_class" translatable="false">com.android.car.settings.bluetooth.BluetoothSettingsFragment</string>
     <bool name="config_top_level_enable_chevrons">false</bool>
+    <integer name="config_activity_embed_split_min_cur_dp">1000</integer>
 </resources>
