Hide queue button when there is no queue
Bug: 365570763
Test: Manual
Flag: com.android.car.carlauncher.media_card_fullscreen

Change-Id: I5801a79b482afd297fb5ea2f8205702a30a20401

--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/xml/control_bar_media_card_queue_history_motion_scene.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/xml/control_bar_media_card_queue_history_motion_scene.xml
@@ -163,6 +163,11 @@
             <PropertySet
                 motion:visibilityMode="ignore"/>
         </ConstraintOverride>
+        <ConstraintOverride
+            android:id="@id/queue_button">
+            <PropertySet
+                motion:visibilityMode="ignore"/>
+        </ConstraintOverride>
     </ConstraintSet>
 
     <ConstraintSet
@@ -311,6 +316,11 @@
         </ConstraintOverride>
         <ConstraintOverride
             android:id="@id/playback_action_id2">
+            <PropertySet
+                motion:visibilityMode="ignore"/>
+        </ConstraintOverride>
+        <ConstraintOverride
+            android:id="@id/queue_button">
             <PropertySet
                 motion:visibilityMode="ignore"/>
         </ConstraintOverride>
