--- a/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitLauncher/res/layout/control_bar_media_card.xml
@@ -71,7 +71,6 @@
             android:id="@+id/custom_action_overflow_container"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/media_card_large_button_size"
-            android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
             android:layout_marginStart="@dimen/media_card_view_separation_margin"
             android:paddingHorizontal="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
             android:background="@drawable/pill_button_shape"
@@ -79,7 +78,7 @@
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
             app:layout_constraintStart_toEndOf="@id/playback_action_id2"
-            app:layout_constraintEnd_toStartOf="@id/queue_button"
+            app:layout_constraintEnd_toStartOf="@id/guideline"
             app:layout_constraintTop_toTopOf="@id/play_pause_button"
             app:layout_constraintHorizontal_bias="1">
 
@@ -133,12 +132,11 @@
             android:id="@+id/custom_action_container"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/media_card_large_button_size"
-            android:layout_marginEnd="@dimen/control_bar_media_card_view_end_margin"
             android:layout_marginStart="@dimen/media_card_view_separation_margin"
             android:paddingHorizontal="@dimen/control_bar_media_card_custom_action_layout_horizontal_padding"
             app:layout_constraintBottom_toBottomOf="@id/play_pause_button"
             app:layout_constraintStart_toEndOf="@id/playback_action_id2"
-            app:layout_constraintEnd_toStartOf="@id/queue_button"
+            app:layout_constraintEnd_toStartOf="@id/guideline"
             app:layout_constraintTop_toTopOf="@id/play_pause_button"
             app:layout_constraintHorizontal_bias="1">
 
