Style car_ui_activity_background_color in reference designs
Bug: 369475335
Test: Manual
Flag: EXEMPT reference design color change

Change-Id: I5e13df0143187411a06ce91f10f8c9a52d69e7e4

--- a/car_product/app_overlays/car-ui-customizations/res/values/colors.xml
+++ b/car_product/app_overlays/car-ui-customizations/res/values/colors.xml
@@ -37,4 +37,6 @@
     <color name="car_ui_toolbar_tab_selected_color">@color/car_on_secondary_container</color>
     <!-- The text color for unselected toolbar tabs -->
     <color name="car_ui_toolbar_tab_unselected_color">@color/car_on_surface_variant</color>
+    <!-- Background color to use on full screen activities -->
+    <color name="car_ui_activity_background_color">@color/car_background</color>
 </resources>
