--- a/car_product/car_ui_portrait/rro/car-ui-customizations/res/xml/overlays.xml
+++ b/car_product/car_ui_portrait/rro/car-ui-customizations/res/xml/overlays.xml
@@ -57,6 +57,7 @@
     <item target="color/car_ui_toolbar_search_hint_text_color" value="@color/car_ui_toolbar_search_hint_text_color" />
     <item target="color/car_ui_toolbar_tab_item_selector" value="@color/car_ui_toolbar_tab_item_selector" />
     <item target="color/car_ui_preference_two_action_divider_color" value="@color/car_ui_preference_two_action_divider_color" />
+    <item target="color/car_ui_activity_background_color" value="@color/car_ui_activity_background_color" />
 
     <item target="drawable/car_ui_list_item_background" value="@drawable/car_ui_list_item_background" />
     <item target="drawable/car_ui_toolbar_background" value="@drawable/car_ui_toolbar_background" />
