Update Dialog width
Bug: 376125864
Test: Manual
Flag: EXEMPT resource only change

Change-Id: I2e640ade462d2a6d6e4bf10022cc50c0d56b323a

--- a/car_product/car_ui_portrait/rro/android/res/values/themes_device_defaults.xml
+++ b/car_product/car_ui_portrait/rro/android/res/values/themes_device_defaults.xml
@@ -127,6 +127,9 @@
         <item name="android:listPreferredItemHeightSmall">@*android:dimen/car_single_line_list_item_height</item>
         <item name="android:colorControlNormal">@color/btn_device_default</item>
         <item name="android:colorControlActivated">@color/car_control_highlight</item>
+
+        <!-- Width of 832dp -->
+        <item name="android:windowMinWidthMajor">68%</item>
     </style>
 
     <style name="Theme.DeviceDefault.Settings.Dialog" parent="android:Theme.DeviceDefault.Dialog.Alert">
