--- a/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values-sw600dp/dimens.xml
+++ b/car_product/car_ui_portrait/apps/CarUiPortraitSystemUI/res/values-sw600dp/dimens.xml
@@ -15,5 +15,6 @@
   ~ limitations under the License
   -->
 <resources>
-    <dimen name="large_dialog_width">580dp</dimen>
+    <!-- Width of the framework SystemUIDialog -->
+    <dimen name="large_dialog_width">832dp</dimen>
 </resources>
