--- a/car_product/rro/overlay-visual/androidRRO/res/layout-car/car_alert_dialog_title.xml
+++ b/car_product/rro/overlay-visual/androidRRO/res/layout-car/car_alert_dialog_title.xml
@@ -45,7 +45,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toEndOf="@+id/icon"
-            android:textAlignment="center"
+            android:textAlignment="textStart"
             android:layout_centerVertical="true"
             style="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle" />
     </RelativeLayout>
