Revert the new default MCP value (ag/29980127) to 32 processes.
The impact of high MCP value is untested on AAOS. To avoid caching too many processes in memory and causing memory pressure on low memory devices, keep the old default value 32 for now.

Flag: EXEMPT config change
Bug: 375265023
Change-Id: I88295b4dd95cf5ccda115e424b82dd93f55efc00

--- a/car_product/rro/overlay-config/androidRRO/res/values/config.xml
+++ b/car_product/rro/overlay-config/androidRRO/res/values/config.xml
@@ -224,4 +224,10 @@
     <string-array name="config_defaultAllowlistLaunchOnPrivateDisplayPackages">
         <item>com.example.android.launchonprivatedisplay</item>
     </string-array>
+
+    <!-- The number of the max cached processes in the system.
+         This change reverts the new default MCP value (ag/29980127, b/373735578#comment23) to
+         the old value.
+         TODO(b/375265023): Remove this config once the new default value is tested on AAOS. -->
+    <integer name="config_customizedMaxCachedProcesses">32</integer>
 </resources>
